# zkdb-plonky3

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  STATUS.md  docker-entrypoint.sh
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  custom-dataset.ts  demo.ts  presets.ts
src/: field.rs  lib.rs  main.rs  types.rs
src/api/: error.rs  mod.rs  router.rs  state.rs
src/api/dto/: benchmark.rs  dataset.rs  mod.rs  proof.rs  query.rs
src/api/handlers/: benchmarks.rs  datasets.rs  mod.rs  queries.rs
src/audit/: mod.rs
src/backend/: constraint_checked.rs  mod.rs  plonky3.rs  registry.rs  traits.rs
src/benchmarks/: cases.rs  compare.rs  dataset.rs  metrics.rs  mod.rs  pack.rs  runner.rs  storage.rs  types.rs
src/circuit/: decoder.rs  mod.rs  operator.rs  witness.rs
src/commitment/: merkle.rs  mod.rs  poseidon.rs  root.rs  service.rs
src/crypto/: mod.rs
src/database/: encoding.rs  ingest.rs  mod.rs  schema.rs  service.rs  snapshot.rs  storage.rs
src/gates/: arithmetic.rs  boolean.rs  comparison.rs  decompose.rs  group.rs  join.rs  merkle.rs  mod.rs  mux.rs  permutation.rs  running_sum.rs  sort.rs
src/jobs/: mod.rs  registry.rs  types.rs
src/policy/: engine.rs  mod.rs  rules.rs
src/proof/: artifacts.rs  mod.rs  prover.rs  verifier.rs
src/query/: ast.rs  logical_plan.rs  mod.rs  operators.rs  parser.rs  physical_plan.rs  proof_plan.rs  service.rs
src/utils/: mod.rs
tests/: plonky3_integration_test.rs  plonky3_soundness_release.rs
