[package]
name = "zkdb-plonky3"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge database with snapshot-based proving (Plonky3 backend)"

[[bin]]
name = "zkdb"
path = "src/main.rs"

[lib]
name = "zkdb_plonky3"
path = "src/lib.rs"

[dependencies]
# Plonky3 FRI-based STARK
p3-field       = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-matrix      = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-air         = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-challenger  = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-commit      = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-uni-stark   = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-fri         = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-dft         = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-symmetric   = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-baby-bear   = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-poseidon2   = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-goldilocks  = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Hashing
blake3 = "1"
sha2 = "0.10"
hex = "0.4"

# Concurrency / collections
dashmap = "5"
parking_lot = "0.12"

# SQL parsing
sqlparser = "0.44"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Async trait
async-trait = "0.1"

# HTTP types
http = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Random / misc
rand = "0.8"
bytes = "1"

# Proof serialization
postcard = { version = "1", features = ["alloc"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dev-dependencies]
tokio-test = "0.4"
